[package]
name = "vate"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/michaelni678/vate"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["validate", "validation", "validator"]
description = "Rust data validation crate"

[dependencies]
regex = { version = "1.11.0", optional = true }
vate-macros = { path = "../vate-macros" }

[features]
default = []
full = [
    "regex",
]
regex = ["dep:regex"]