[package]
name = "vate"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/michaelni678/vate"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["validate", "validation", "validator"]
description = "Data validation crate"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
full = [
    "regex",
    "serialize",
]
regex = ["dep:regex"]
serialize = ["dep:serde"]

[dependencies]
regex = { version = "1.11.0", optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }
vate-macros = { path = "../vate-macros" }